--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.stl filter=lfs diff=lfs merge=lfs -text
 laser-scan/** filter=lfs diff=lfs merge=lfs -text
 mesh/** filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.hdr filter=lfs diff=lfs merge=lfs -text
